test:Sample UT's added

--- a/serv/package.json
+++ b/serv/package.json
@@ -4,7 +4,8 @@
   "description": "A server using leveldb for a todo app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "author": "prethiv_nageswaran",
   "license": "ISC",
@@ -14,5 +15,12 @@
     "express": "^4.19.2",
     "level": "^8.0.1"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-mock-req-res": "^1.0.2"
+  }
 }
